Refactor MessageService for clarity and efficiency
Refactor MessageService to use constants for error messages and simplify isAnonymous logic.